--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,13 @@
 theme: minima
 title: Run Build Dev Github test
 author: Justin Burmeister
-description: Im learning about GitHub Pages
+description: I''m learning about GitHub Pages
+lsi: false
+safe: true
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
