--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: minima
 title: Run Build Dev Github test
 author: Justin Burmeister
-description: I''m learning about GitHub Pages
+description: I'm learning about GitHub Pages
 lsi: false
 safe: true
 incremental: false
