switch to git name

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: minima
 minima:
   skin: dark
 title: Run Build Dev Github test
-author: site.githib.owner_name
+author: {{site.githib.owner_name}}
 description: I'm learning about GitHub Pages
 lsi: false
 safe: true
