--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: minima
 minima:
   skin: dark
 title: Run Build Dev Github test
-author: {{site.githib.owner_name}}
+author: Justin Burmeister
 description: I'm learning about GitHub Pages
 lsi: false
 safe: true
@@ -13,3 +13,4 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+remote_theme: "jekyll/minima@1e8a445"
