--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,4 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
-remote_theme: "jekyll/minima@1e8a445"
+remote_theme: "https://github.com/jekyll/minima@1e8a445"
